# SNN_NEAT_Implementation

./: CMakeLists.txt  README.md  SNN_NEAT_Implementations.code-workspace
BaseImplementation/: CMakeLists.txt  experiments.cpp  gene.cpp  genome.cpp  innovation.cpp  link.cpp  main.cpp  neat.cpp  network.cpp  nnode.cpp  organism.cpp  population.cpp  species.cpp  trait.cpp  window.state
BaseImplementation/Docs/: CppNotes.md
BaseImplementation/includes/: experiments.h  gene.h  genome.h  innovation.h  link.h  neat.h  network.h  nnode.h  organism.h  population.h  species.h  trait.h
RaylibBaseImplementation/: CMakeLists.txt  main.cpp  window.state
RaylibBaseImplementation/Graphics/: CMakeLists.txt  KeyInput.cpp  KeyInput.h  Painter.cpp  Painter.h
RaylibBaseImplementation/NEATCore/: CMakeLists.txt  Gene.cpp  Gene.h  Genome.cpp  Genome.h  Innovation.cpp  Innovation.h  Link.cpp  Link.h  NNode.cpp  NNode.h  Neat.cpp  Neat.h  Network.cpp  Network.h  Organism.cpp  Organism.h  Population.cpp  Population.h  Species.cpp  Species.h  Trait.cpp  Trait.h
RaylibBaseImplementation/Simulation/: CMakeLists.txt  Experiment.cpp  Experiment.h  ExperimentXOR.cpp  ExperimentXOR.h  Experiments.cpp  Experiments.h  Simulation.cpp  Simulation.h
RaylibBaseImplementation/assets/: p2test.ne  test.ne
